--- a/src/index.html
+++ b/src/index.html
@@ -24,25 +24,31 @@
           alt="Equilibrium"
           class="l-mainImg"
         />
-        <h1 class="infoBlock infoBlock-header">
+        <a href="#" class="infoBlock infoBlock-header">
           Equilibrium #3429
-        </h1>
+        </a>
         <p class="infoBlock infoBlock-subline">
           Our Equilibrium collection promotes balance and calm.
         </p>
         <div class="l-stats">
           <p class="u-colorAccent l-stat-currency">
-            <img src="images/icon-ethereum.svg" />
+            <img src="images/icon-ethereum.svg" class="icon" />
             0.041 ETH
           </p>
           <p class="l-stat-time">
-            <img src="images/icon-clock.svg" />
+            <img src="images/icon-clock.svg" class="icon" />
             3 days left
           </p>
         </div>
         <hr class="rule" />
-        <img src="images/image-avatar.png" alt="Jules Wyvern Avatar" />
-        <p>Creation of Jules Wyvern</p>
+        <div class="l-avatarContainer">
+          <img
+            src="images/image-avatar.png"
+            alt="Jules Wyvern Avatar"
+            class="avatar"
+          />
+          <p>Creation of <a href="#">Jules Wyvern</a></p>
+        </div>
       </main>
     </div>
 
