--- a/src/index.html
+++ b/src/index.html
@@ -17,13 +17,17 @@
   <body class="contentContainer">
     <div class="l-fullPage">
       <main class="card">
-        <img
-          src="images/image-equilibrium.jpg"
-          width="300"
-          height="300"
-          alt="Equilibrium"
-          class="l-mainImg"
-        />
+        <a href="#" class="l-overlay-container">
+          <img
+            src="images/image-equilibrium.jpg"
+            width="300"
+            height="300"
+            alt="Equilibrium"
+          />
+          <div class="l-overlay">
+            <img src="images/icon-view.svg" class="l-overlay-icon" />
+          </div>
+        </a>
         <a href="#" class="infoBlock infoBlock-header">
           Equilibrium #3429
         </a>
