Refactor style code.

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
       type="image/png"
@@ -28,7 +26,7 @@
             <img src="images/icon-view.svg" class="l-overlay-icon" />
           </div>
         </a>
-        <a href="#" class="infoBlock infoBlock-header">
+        <a href="#" class="infoBlock infoBlock-header u-verticalSpace">
           Equilibrium #3429
         </a>
         <p class="infoBlock infoBlock-subline">
@@ -36,22 +34,22 @@
         </p>
         <div class="l-stats">
           <p class="u-colorAccent l-stat-currency">
-            <img src="images/icon-ethereum.svg" class="icon" />
+            <img src="images/icon-ethereum.svg" class="l-icon" />
             0.041 ETH
           </p>
           <p class="l-stat-time">
-            <img src="images/icon-clock.svg" class="icon" />
+            <img src="images/icon-clock.svg" class="l-icon" />
             3 days left
           </p>
         </div>
-        <hr class="rule" />
+        <hr class="rule u-verticalSpace" />
         <div class="l-avatarContainer">
           <img
             src="images/image-avatar.png"
             alt="Jules Wyvern Avatar"
             class="avatar"
           />
-          <p>Creation of <a href="#">Jules Wyvern</a></p>
+          <p class="u-bumpRight">Creation of <a href="#">Jules Wyvern</a></p>
         </div>
       </main>
     </div>
